--- a/docs/views/technique/html/面试题.md
+++ b/docs/views/technique/html/面试题.md
@@ -9,15 +9,18 @@ keys:
  - '123456'
 isShowComments: true
 publish: true
+sticky: 1
 ---
 <Boxx />
 
-## $HTML，HTTP，web 综合问题
-
+## HTML，HTTP，web 综合问题
 
 盒模型（Box Model）是 CSS（层叠样式表）中的一个概念，用于描述网页元素的布局和空间占用情况。盒模型将每个 HTML 元素视为一个矩形盒子，由内容（Content）、内边距（Padding）、边框（Border）和外边距（Margin）组成。
 
 ### 1、什么是盒模型
+- CSS 盒模型包括内容(content)、内边距(padding)、边框(border)和外边距(margin)。
+- 标准盒模型（content-box）：width 和 height 只包括内容区域，不包括内边距和边框。
+- IE 盒模型（border-box）：width 和 height 包括内容、内边距和边框。
 
 #### 盒模型的组成部分
 
@@ -89,9 +92,83 @@ publish: true
 </html>
 ```
 
+### 2、HTML5 新增了哪些标签？
+- HTML5 新增了很多语义化标签，例如：
+  - `header`: 定义页面头部区域。
+  - `nav`: 定义导航链接。
+  - `article`: 定义文章内容。
+  - `section`: 定义文档中的节。
+  - `footer`: 定义页面底部区域。
+  - `aside`: 定义侧边栏内容。
+
+### 3、什么是跨域请求（Cross-Origin Request）？如何解决跨域问题？
+跨域请求是指在浏览器中，当前页面的域与请求目标的域不一致，浏览器会阻止此类请求。常见的解决跨域问题的方法包括 JSONP、CORS（跨域资源共享）、代理服务器、跨域资源请求（CORS）、WebSocket 等。
+- CORS（跨域资源共享）：CORS 是一种由 W3C 标准化的跨域解决方案，通过在服务端设置 HTTP 头部信息，允许指定的源访问资源。在服务端设置响应头 Access-Control-Allow-Origin，允许指定的源进行跨域请求。例如，允许所有源进行跨域访问可以设置为：
+```java
+Access-Control-Allow-Origin: *
+Access-Control-Allow-Origin: http://example.com
+```
+- 代理服务器：通过在同源的服务器上设置代理，将跨域请求转发到目标服务器上，并将响应返回给客户端。可以利用 Node.js、Nginx 等服务器来实现代理服务器。
+- JSONP（JSON with Padding）：JSONP 是一种利用 `script` 标签不受同源策略限制的特性来实现跨域请求的方法。通过在客户端动态创建 `script` 标签，将回调函数名作为参数传递给服务端，在服务端返回的数据中调用该回调函数，从而实现跨域数据获取。
+- WebSocket：WebSocket 是一种全双工的通信协议，可以在客户端和服务器之间建立持久连接，实现实时通信，跨域请求时不受同源策略的限制。
+- 反向代理：在服务器端设置反向代理，将跨域请求转发到目标服务器上，并将响应返回给客户端。可以利用 Apache、Nginx 等服务器来实现反向代理。
 
 
-## $CSS 部分
+### 4、websorket 是什么？ 怎么使用
+WebSocket 是一种在客户端和服务器之间实现双向通信的网络协议，它允许客户端和服务器之间建立持久连接，并能够在连接建立后随时进行数据传输。WebSocket 在实时性要求较高的场景下非常有用，比如实时聊天、在线游戏、实时数据更新等。
+
+WebSocket 的特点包括：
+- **双向通信**：客户端和服务器之间可以互相发送数据。
+- **持久连接**：一旦连接建立，就可以保持打开状态，而不需要重新建立连接。
+- **较低的延迟**：与传统的 HTTP 请求相比，WebSocket 通信可以减少网络延迟，提升实时性。
+- **轻量级**：WebSocket 协议相对简单，通信时的数据开销较小。
+
+在前端使用 WebSocket 通常需要以下步骤：
+- 创建 WebSocket 实例：在客户端代码中创建一个 WebSocket 实例，并指定要连接的服务器地址。
+```js
+const sorket = new WebSorket('ws://example.com/socket')
+```
+- 事件监听：WebSocket 实例提供了多个事件来处理连接状态和数据传输，通常需要监听这些事件并处理相应的逻辑。
+```js
+socket.onopen = function(event) {
+    console.log('WebSocket connection opened.');
+};
+
+socket.onmessage = function(event) {
+    console.log('Received message:', event.data);
+};
+
+socket.onclose = function(event) {
+    console.log('WebSocket connection closed.');
+};
+
+socket.onerror = function(error) {
+    console.error('WebSocket error:', error);
+};
+```
+- 发送和接收数据：通过 WebSocket 实例的 `send`() 方法向服务器发送数据，并通过 `onmessage` 事件处理服务器返回的数据。
+```js
+// 发送数据
+socket.send('Hello, server!');
+
+// 接收数据
+socket.onmessage = function(event) {
+    console.log('Received message:', event.data);
+};
+```
+- 关闭连接：在不再需要使用 WebSocket 连接时，可以调用 close() 方法来关闭连接。
+
+使用场景
+
+- 实时地图应用：WebSocket 可以用于实时更新地图信息，比如实时交通信息、公共交通位置等。
+
+
+
+
+
+
+
+## CSS 部分
 
 ### 1、`display: none;`与 `visibility: hidden;`的区别
 - 联系：它们都能让元素不可见
@@ -104,7 +181,19 @@ publish: true
     - 读屏器不会读取display: none;元素内容；会读取visibility: hidden;元素内容
 
 ### 2、清除浮动的几种方式，各自的优缺点
-### 3、请描述一下 cookies，sessionStorage 和 localStorage 的区别？
+### 3、
+
+### 4、CSS 选择器的优先级是如何计算的？
+优先级计算规则如下：
+- 内联样式（如 style="..."）权重最高，为 1000。
+- ID 选择器的权重为 100。
+- 类选择器、属性选择器和伪类选择器的权重为 10。
+- 标签选择器和伪元素选择器的权重为 1。
+- 通配符选择器、关系选择器和否定伪类对权重没有影响。
+
+## JavaScript 部分
+
+### 1、请描述一下 cookies，sessionStorage 和 localStorage 的区别？
 - cookie是网站为了标示用户身份而储存在用户本地终端（Client Side）上的数据（通常经过加密）
 - cookie 数据始终在同源的 http 请求中携带（即使不需要），记会在浏览器和服务器间来回传递
 - sessionStorage和localStorage不会自动把数据发给服务器，仅在本地保存
@@ -116,12 +205,113 @@ publish: true
     - sessionStorage 数据在当前浏览器窗口关闭后自动删除
     - cookie 设置的cookie过期时间之前一直有效，即使窗口或浏览器关闭
 
+### 2、什么是闭包（closure）？
+- 闭包是指一个函数可以记住并访问它的词法作用域，即使这个函数在其词法作用域之外执行。闭包使得函数可以访问其外部函数作用域内的变量
+- 闭包是指函数和其包含的作用域形成的组合。闭包常用于封装变量、实现模块化和异步编程。优点包括可以访问外部作用域的变量、实现数据封装等，缺点包括可能导致内存泄漏和增加代码复杂度等。
 
-### 4、请描述一下 cookies，sessionStorage 和 localStorage 的区别？
+### 3、解释 this 关键字
+this 的值取决于函数的调用方式：
+- 在全局作用域中，this 指向全局对象（浏览器中是 window）。
+- 作为对象的方法调用时，this 指向调用方法的对象。
+- 作为构造函数调用时，this 指向新创建的实例。
+- 使用 call、apply 或 bind 时，this 被显式指定。
+
+### 4、什么是事件委托？
+- 事件委托是将子元素的事件处理程序委托给父元素来处理的技术。通过这种方式，只需要在父元素上绑定一个事件处理程序，而不是在每个子元素上都绑定事件处理程序。
+
+### 5、 JavaScript 的基本数据类型是什么？有哪些类型？
+- 基本数据类型包括：undefined、null、boolean、number、string、symbol（ES6 新增）。
+
+### 6、null 和 undefined 的区别是什么？
+- null 表示一个空对象引用，undefined 表示未定义或未赋值。
+
+### 7、介绍一下 JavaScript 中的原始类型和引用类型。
+- 原始类型包括 undefined、null、boolean、number、string、symbol。引用类型包括对象、数组、函数等。
+
+### 8、什么是变量提升（hoisting）？如何避免它带来的问题？
+- 变量提升是指在 JavaScript 中，变量和函数声明会被提升至作用域的顶部。为避免问题，应该养成在作用域的顶部声明变量和函数的习惯，避免在使用之前访问变量或函数。
+
+### 9、如何理解 JavaScript 中的作用域和作用域链？ 补充原型链
+- 作用域是指变量和函数的可访问范围，作用域链是指 JavaScript 中通过词法作用域（静态作用域）连接到作用域链上的所有作用域，用于查找变量。
+- 原型链是 JavaScript 中实现对象继承的机制，它通过对象之间的原型链关系实现属性和方法的继承。
+- 继承可以通过原型继承和类继承来实现。原型继承是通过修改对象的原型链来实现，而类继承是通过类和子类的关系来实现。
 
 
-## $JavaScript
+### 10、介绍一下 JavaScript 中的事件循环（event loop）机制。
+事件循环是 JavaScript 异步编程的基础，它通过不断地从任务队列中取出任务执行，实现了非阻塞的异步编程模型。
+- JavaScript 中的事件循环和微任务（microtask）以及宏任务（macrotask）有什么区别？
+  - 事件循环是 JavaScript 异步编程的基础，它包括一个宏任务队列和一个微任务队列。宏任务包括 script、setTimeout、setInterval 等，微任务包括 Promise、MutationObserver 等。在每个事件循环中，首先执行所有微任务，然后执行一个宏任务，如此循环。
 
-## $Vue、uniapp、微信小程序
+### 11、解释一下 JavaScript 中的异步编程，以及常见的异步编程方案。
+- 异步编程是指在程序执行过程中，不等待某些耗时操作完成而继续执行后续代码的编程方式。常见的异步编程方案包括回调函数、Promise、async/await、事件监听等。
+- `Promise` 是一种用于处理异步操作的对象，它可以表示一个异步操作的最终完成或失败，并返回结果或错误。可以使用 Promise 的 then() 和 catch() 方法来处理异步操作的结果和错误。
+- `async/await` 是 ES8（ES2017）引入的异步编程语法糖，用于简化 Promise 的使用，使异步代码看起来更像同步代码。async 函数返回一个 Promise 对象，await 关键字可以在异步函数中等待 Promise 对象的完成。区别在于语法上的不同，以及 `async/await` 更易读易写。
+
+
+### 12、什么是箭头函数（arrow function）？和普通函数有什么不同？
+- 箭头函数是 ES6 新增的函数定义方式，它具有更简洁的语法和词法绑定的 this。与普通函数不同的是，箭头函数没有自己的 this、arguments、super 和 new.target，并且不能用作构造函数。
+
+### 13、如何判断一个变量的数据类型？有哪些方法？
+- 可以使用 typeof 操作符、instanceof 操作符、Object.prototype.toString.call() 方法等来判断变量的数据类型。
+
+### 14、JavaScript 中的 let 和 const 关键字有什么特性？和 var 有什么区别？
+- let 和 const 是 ES6 新增的声明变量的方式，与 var 不同的是，它们具有块级作用域，并且不会发生变量提升。let 声明的变量可以被修改，而 const 声明的变量是常量，不可被修改。
+
+
+
+
+## Vue、React、uniapp、微信小程序
+
+### 1、什么是 JSX？
+- JSX 是 JavaScript 的语法扩展，允许在 JavaScript 代码中编写类似 HTML 的语法。JSX 会被编译为 React.createElement 调用，生成 React 元素。
+
+### 2、React 的生命周期方法有哪些？
+- 旧版生命周期方法（React 16.3 之前）：componentWillMount、componentDidMount、componentWillReceiveProps、shouldComponentUpdate、componentWillUpdate、componentDidUpdate、componentWillUnmount。
+- 新版生命周期方法（React 16.3 之后）：static getDerivedStateFromProps、getSnapshotBeforeUpdate。
+
+### 3、Vue 的双向绑定是如何实现的？
+- Vue 使用数据劫持结合发布-订阅模式，通过 Object.defineProperty 劫持对象的 getter 和 setter，在数据变化时发布消息给订阅者，触发相应的回调函数。
+
+### 4、Vue 的生命周期钩子有哪些？
+- 创建前/后：beforeCreate、created
+- 挂载前/后：beforeMount、mounted
+- 更新前/后：beforeUpdate、updated
+- 销毁前/后：beforeDestroy、destroyed
 
 ## $TS
+
+## 浏览器工作原理
+
+### 1、 解释浏览器的渲染过程
+浏览器的渲染过程大致如下：
+- 解析 HTML，构建 DOM 树。
+- 解析 CSS，构建 CSSOM 树。
+- 将 DOM 树和 CSSOM 树结合，生成渲染树。
+- 布局（layout）：计算渲染树中各个节点的大小和位置。
+- 绘制（paint）：将渲染树节点绘制到屏幕上。
+
+### 2、 什么是重绘（repaint）和重排（reflow）？
+
+- 重绘：当元素的外观改变（如颜色、背景）但布局没有改变时，触发重绘。
+- 重排：当元素的尺寸、位置或整个页面布局发生变化时，触发重排，重排会导致浏览器重新计算布局，并且通常伴随着重绘。
+
+## 性能优化
+
+### 如何优化页面加载性能？/ 怎么解决首屏加载慢的问题？
+- 压缩资源文件: 对 HTML、CSS、JavaScript 文件进行压缩，减小文件体积，加快下载速度。可以使用工具如Webpack、Gulp、UglifyJS等进行自动化压缩。
+- 减少 HTTP 请求：合并、内联或者延迟加载资源文件，尽量减少页面需要请求的资源文件数量
+- 使用懒加载（lazy loading）和按需加载（code splitting）。
+- 分片加载：将页面分为多个模块或分片，在用户滚动到对应模块时再进行加载，减少首屏加载时间。
+- 使用 CDN 加速： 将静态资源（如图片、JavaScript、CSS等）托管到 CDN（内容分发网络）上，利用 CDN 的分布式部署，加速资源的加载。
+- 优化图片: 压缩图像。
+- 优化 CSS 选择器。
+- 使用缓存：合理设置缓存策略，利用浏览器缓存和服务端缓存来减少请求次数和加载时间
+- 服务端渲染（SSR）：对于需要搜索引擎爬虫抓取的页面，使用服务端渲染技术来生成首屏内容，加快页面加载速度。
+
+### 如何优化 JavaScript 的性能？有哪些常见的性能优化手段？
+- 优化 JavaScript 性能的方法包括减少页面重绘和回流、使用事件委托、合并和压缩 JavaScript 文件、异步加载 JavaScript、使用节流和防抖函数等。
+
+
+
+
+
